# python_data_analysis_with_pandas

./: .gitignore  .pre-commit-config.yaml  README.md  build_python.sh  pyproject.toml  requirements.txt
data/: Restaurant - Foods.csv  Restaurant - Week 1 Satisfaction.csv  ecommerce.csv  salesmen.csv
docs/: docs.html  documentation.html  home.html
src/: __init__.py
src/notebooks/: dataframes_one.ipynb  visualization.ipynb
src/notebooks/.ipynb_checkpoints/: intro_to_jupyter_notebook-checkpoint.ipynb  python_crash_course-checkpoint.ipynb  series-checkpoint.ipynb
src/python/: series.py
